--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,35 @@
-﻿html, body {
+﻿html, body
+{
     height: 100%;
     overflow: auto;
     font-family: Verdana;
     font-size: 13px;
 }
-body {
+body
+{
     padding: 0;
     margin: 0;
     text-align: center;
 }
-#silverlightControlHost {
+#silverlightControlHost
+{
     text-align: center;
 }
 
-#main {
-    width: 720px;
+#main
+{
+    width: 100%;
     text-align: left;
-    margin: auto;
+    margin: 50 auto;
 }
 
-h1{
+h1
+{
     text-align: center;
     font-weight: normal;
 }
 
-li{
-    margin-bottom: 5px;
-}
-
-.buttons
+li
 {
-    margin:0 auto;
-    width:800px;
+    margin-bottom: 5px;
 }
